[XUI-446] Fix stepper tab truncation in IE11
This issue is similar to the one in #4293, only rotated 90 degrees.
Adding a `max-width` to the offending element’s child seems enough to
force IE11 to calculate the width of the element correctly.

The `max-width` in question is a magic number internal to the component.
I figured needing to add this in one more place was enough to
necessitate creating a Sass variable for it.

--- a/src/sass/7-components/_stepper.scss
+++ b/src/sass/7-components/_stepper.scss
@@ -471,6 +471,7 @@
 //
 // Styleguide: Compounds.Navigation.Stepper.3.4
 
+$stepper-tab-max-width: 300px;
 
 @mixin xui-stepper-link-color($color) {
 	color: $color;
@@ -512,7 +513,7 @@
 }
 
 .#{$ns}-stepper-tab {
-	max-width: 300px;
+	max-width: $stepper-tab-max-width;
 	position: relative;
 
 	&:before,
@@ -692,13 +693,15 @@
 .#{$ns}-stepper-stacked,
 .#{$ns}-stepper-sidebar {
 	.#{$ns}-stepper-tab {
-		max-width: 320px;
+		// Add child `.xui-stepper-link` padding of 10px
+		max-width: $stepper-tab-max-width + 20px;
 	}
 }
 
 .#{$ns}-stepper-link-wrapper {
 	align-items: center;
 	display: flex;
+	max-width: $stepper-tab-max-width;
 	padding-right: $xui-s-standard;
 	text-align: left;
 }
